--- a/css/styles.main.css
+++ b/css/styles.main.css
@@ -5,7 +5,7 @@
 * Browsers: last 4 version
 */
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
     v2.0 | 20110126
     License: none (public domain)
 */
@@ -93,8 +93,8 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
 }
 
@@ -115,6 +115,10 @@ section {
 
 body {
   line-height: 1;
+  background-color: var(--body-bg);
+  color: var(--color-dark-1);
+  font-family: din-1451-lt-pro-engschrift, sans-serif;
+  font-size: 1rem;
 }
 
 ol,
@@ -127,10 +131,10 @@ q {
   quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
   content: "";
   content: none;
 }
@@ -141,10 +145,15 @@ table {
 }
 
 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   --header-padding: 2em 6em;
   --main-padding: 5em 5em;
   --mobile-padding: 2em 2em;
-  --shadow-1: 3px 3px 3em hsla(31, 33%, 68%, 0.7),
+  --shadow-1:
+    3px 3px 3em hsla(31, 33%, 68%, 0.7),
     -0.5em 1.5em 1.5em hsla(30, 11%, 4%, 0.134);
   --shadow-2: -6px 7px 29px 1px rgba(0, 0, 0, 0.2);
 }
@@ -171,21 +180,6 @@ table {
   --cloud-grey: #bec1bf;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-/*? element styles*/
-body {
-  background-color: var(--body-bg);
-  color: var(--color-dark-1);
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 1rem;
-}
-
 @media only screen and (max-width: 414px) {
   header {
     padding: var(--mobile-padding);
@@ -200,8 +194,7 @@ body {
 
 header,
 footer {
-  -webkit-box-shadow: 3px 3px 3em var(--color-dark-2),
-    -3px -3px 3em var(--color-dark-2);
+  -webkit-box-shadow: 3px 3px 3em var(--color-dark-2), -3px -3px 3em var(--color-dark-2);
   box-shadow: 3px 3px 3em var(--color-dark-2), -3px -3px 3em var(--color-dark-2);
 }
 
@@ -221,12 +214,12 @@ footer div {
 }
 
 footer > div > p {
-  margin: 1.2em 0em;
+  margin: 1.2em 0;
 }
 
 main {
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   line-height: 1.6;
 }
 
@@ -234,17 +227,16 @@ li {
   list-style: none;
 }
 
-/*? base styles for links */
 a {
-  /* keep the contact cta bright */
   color: var(--color-dark-1);
   text-decoration: none;
-  -webkit-transition: color 0.3s ease;
-  -o-transition: color 0.3s ease;
   transition: color 0.3s ease;
+  -webkit-transition: color 0.3s ease;
+  -moz-transition: color 0.3s ease;
+  -ms-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
 }
 
-/*? text styles */
 h1 {
   font-size: 2rem;
   font-weight: 700;
@@ -301,11 +293,15 @@ img {
 }
 
 .main__home--container > *:nth-child(1) {
+  grid-row: 1;
+  grid-column: 1;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
 .main__home--container > *:nth-child(2) {
+  grid-row: 1;
+  grid-column: 3;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
@@ -391,11 +387,15 @@ img {
 }
 
 .main__contact--container > *:nth-child(1) {
+  grid-row: 1;
+  grid-column: 1;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
 .main__contact--container > *:nth-child(2) {
+  grid-row: 1;
+  grid-column: 3;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
@@ -438,6 +438,7 @@ img {
 .navigation__link {
   transition: all 0.3s ease-in;
   color: #eae0d5;
+  font-size: 1.4rem;
   -webkit-transition: all 0.3s ease-in;
   -moz-transition: all 0.3s ease-in;
   -ms-transition: all 0.3s ease-in;
@@ -466,7 +467,6 @@ img {
   font-size: 1.1rem;
   border: none;
   border-radius: 6px;
-  font-family: "Roboto Condensed", sans-serif;
   padding: 1em;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -501,6 +501,7 @@ img {
     right: 30.5%;
     z-index: 600;
   }
+
   .navigation__btn--middle::after {
     content: "";
     position: absolute;
@@ -518,6 +519,7 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
+
   .navigation__btn::before {
     content: "";
     position: absolute;
@@ -535,6 +537,7 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
+
   .navigation__btn::after {
     content: "";
     position: absolute;
@@ -552,6 +555,7 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
+
   .navigation-bg {
     display: block;
     z-index: 100;
@@ -567,6 +571,7 @@ img {
     -ms-transition: all 1s cubic-bezier(0.86, 0, 0.07, 1);
     -o-transition: all 1s cubic-bezier(0.86, 0, 0.07, 1);
   }
+
   .navigation__container {
     visibility: hidden;
     opacity: 0;
@@ -582,6 +587,7 @@ img {
     -ms-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     -o-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
+
   .navigation__list {
     display: block;
     position: absolute;
@@ -594,26 +600,30 @@ img {
     -ms-transform: translate(-33%, -30%);
     -o-transform: translate(-33%, -30%);
   }
+
   .navigation__item {
     margin: 1rem 0;
   }
+
   .navigation__link:link,
   .navigation__link:visited {
     display: inline-block;
-    background-image: -o-linear-gradient(
-      240deg,
-      transparent 5%,
-      var(--link-hover),
-      transparent 50%,
-      var(--header-bg) 50%
-    );
-    background-image: linear-gradient(
-      210deg,
-      transparent 5%,
-      var(--link-hover),
-      transparent 50%,
-      var(--header-bg) 50%
-    );
+    background-image:
+      -o-linear-gradient(
+        240deg,
+        transparent 5%,
+        var(--link-hover),
+        transparent 50%,
+        var(--header-bg) 50%
+      );
+    background-image:
+      linear-gradient(
+        210deg,
+        transparent 5%,
+        var(--link-hover),
+        transparent 50%,
+        var(--header-bg) 50%
+      );
     background-size: 210%;
     background-position: 0%;
     font-size: 2rem;
@@ -625,12 +635,14 @@ img {
     -ms-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
   }
+
   .navigation__link:hover,
   .navigation__link:active {
     color: var(--nav-hover);
     background-size: 380%;
     background-position: -2%;
   }
+
   .navigation__checkbox:checked ~ .navigation-bg {
     position: fixed;
     -webkit-transform: scale(50);
@@ -638,15 +650,17 @@ img {
     transform: scale(50);
     height: 100vh;
     width: 100vw;
+    -moz-transform: scale(50);
+    -o-transform: scale(50);
   }
+
   .navigation__checkbox:checked ~ .navigation__container {
     top: 1.5em;
     visibility: visible;
     opacity: 1;
   }
-  .navigation__checkbox:checked
-    ~ .navigation__btn
-    .navigation__btn--middle::after {
+
+  .navigation__checkbox:checked ~ .navigation__btn.navigation__btn--middle::after {
     right: -1rem;
     width: 20px;
     height: 3px;
@@ -658,6 +672,7 @@ img {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
+
   .navigation__checkbox:checked ~ .navigation__btn::before {
     content: "";
     position: absolute;
@@ -675,11 +690,14 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
+
   .navigation__checkbox:checked ~ .navigation__btn::after {
     right: 35%;
     -webkit-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
   }
 }
 
@@ -778,7 +796,7 @@ img {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  padding: 0em 0em;
+  padding: 0 0;
 }
 
 .home__inner a {
@@ -787,7 +805,7 @@ img {
 
 @media only screen and (max-width: 415px) {
   .home__inner {
-    padding: 0em 1.5em;
+    padding: 0 1.5em;
   }
 }
 
@@ -808,7 +826,7 @@ img {
 }
 
 .about__copy {
-  padding: 0em 5em;
+  padding: 0 5em;
   font-size: 2rem;
   text-align: center;
   margin: 2.2em auto;
@@ -867,7 +885,7 @@ img {
 }
 
 .about__skills td {
-  padding: 0em 2em;
+  padding: 0 2em;
   border-bottom: 1px solid var(--color-dark-1);
 }
 
@@ -879,15 +897,12 @@ img {
 }
 
 .about__illustration {
-  /* margin-top:-4em; */
-  /* overflow: hidden; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
   top: 0.5em;
   z-index: -1;
-  /* z-index: -1; */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -906,13 +921,17 @@ img {
   justify-content: center;
 }
 
-.about__cv --btn {
+.about__cv--btn {
   background-color: var(--cloud-grey);
   font-family: "Roboto Condensed", sans-serif;
   border-radius: 30px;
   border: none;
   font-size: 1.2rem;
   padding: 0.9em;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
 }
 
 #foreground--buildings {
@@ -943,31 +962,43 @@ img {
 }
 
 .project__container > *:nth-child(1) {
+  grid-row: 1;
+  grid-column: 1;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
 .project__container > *:nth-child(2) {
+  grid-row: 1;
+  grid-column: 3;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
 
 .project__container > *:nth-child(3) {
+  grid-row: 1;
+  grid-column: 5;
   -ms-grid-row: 1;
   -ms-grid-column: 5;
 }
 
 .project__container > *:nth-child(4) {
+  grid-row: 3;
+  grid-column: 1;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
 }
 
 .project__container > *:nth-child(5) {
+  grid-row: 3;
+  grid-column: 3;
   -ms-grid-row: 3;
   -ms-grid-column: 3;
 }
 
 .project__container > *:nth-child(6) {
+  grid-row: 3;
+  grid-column: 5;
   -ms-grid-row: 3;
   -ms-grid-column: 5;
 }
@@ -983,27 +1014,45 @@ img {
     column-gap: 3em;
     row-gap: 4em;
   }
+
   .project__container > *:nth-child(1) {
+    grid-row: 1;
+    grid-column: 1;
     -ms-grid-row: 1;
     -ms-grid-column: 1;
   }
+
   .project__container > *:nth-child(2) {
+    grid-row: 1;
+    grid-column: 3;
     -ms-grid-row: 1;
     -ms-grid-column: 3;
   }
+
   .project__container > *:nth-child(3) {
+    grid-row: 3;
+    grid-column: 1;
     -ms-grid-row: 3;
     -ms-grid-column: 1;
   }
+
   .project__container > *:nth-child(4) {
+    grid-row: 3;
+    grid-column: 3;
     -ms-grid-row: 3;
     -ms-grid-column: 3;
   }
+
   .project__container > *:nth-child(5) {
+    grid-row: 5;
+    grid-column: 1;
     -ms-grid-row: 5;
     -ms-grid-column: 1;
   }
+
   .project__container > *:nth-child(6) {
+    grid-row: 5;
+    grid-column: 3;
     -ms-grid-row: 5;
     -ms-grid-column: 3;
   }
@@ -1020,16 +1069,21 @@ img {
     column-gap: 3em;
     row-gap: 4em;
   }
+
   .project__container > *:nth-child(1) {
+    grid-row: 1;
+    grid-column: 1;
     -ms-grid-row: 1;
     -ms-grid-column: 1;
   }
 }
 
 .project__card {
-  -webkit-box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7),
+  -webkit-box-shadow:
+    3px 3px 3em rgba(200, 174, 146, 0.7),
     -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
-  box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7),
+  box-shadow:
+    3px 3px 3em rgba(200, 174, 146, 0.7),
     -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
 }
 
@@ -1059,9 +1113,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #2e2e2e;
   }
@@ -1071,9 +1127,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #2e2e2e;
   }
@@ -1083,9 +1141,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #2e2e2e;
   }
@@ -1095,9 +1155,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #2e2e2e;
   }
@@ -1107,9 +1169,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #2e2e2e;
   }
@@ -1119,9 +1183,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #2e2e2e;
   }
@@ -1131,9 +1197,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #103b51;
   }
@@ -1143,9 +1211,11 @@ img {
   0% {
     fill: #eae0d5;
   }
+
   50% {
     fill: #2e2e2e;
   }
+
   100% {
     fill: #103b51;
   }
@@ -1159,16 +1229,19 @@ img {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
     transform: translate(200px, 50px);
   }
 }
+
 @keyframes cloud-move-1 {
   from {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
     transform: translate(200px, 50px);
@@ -1180,6 +1253,7 @@ img {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(400px, 50px);
     transform: translate(400px, 50px);
@@ -1191,6 +1265,7 @@ img {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(400px, 50px);
     transform: translate(400px, 50px);
@@ -1202,9 +1277,10 @@ img {
     -webkit-transform: translate(100px, 50px);
     transform: translate(100px, 50px);
   }
+
   to {
-    -webkit-transform: translate(200px, 0px);
-    transform: translate(200px, 0px);
+    -webkit-transform: translate(200px, 0);
+    transform: translate(200px, 0);
   }
 }
 
@@ -1213,9 +1289,13 @@ img {
     -webkit-transform: translate(100px, 50px);
     transform: translate(100px, 50px);
   }
+
   to {
-    -webkit-transform: translate(200px, 0px);
-    transform: translate(200px, 0px);
+    transform: translate(200px, 0);
+    -webkit-transform: translate(200px, 0);
+    -moz-transform: translate(200px, 0);
+    -ms-transform: translate(200px, 0);
+    -o-transform: translate(200px, 0);
   }
 }
 
@@ -1240,7 +1320,6 @@ img {
 }
 
 #light-switch-1 {
-  /*animation: light-switch 2s infinite 20s linear alternate;*/
   -webkit-animation-duration: 8.5s;
   animation-duration: 8.5s;
   -webkit-animation-name: light-switch-1;
